OSI590 Version fin de ticket

--- a/client/src/app/modules/miscellaneous/components/forms/chips-employee/chips-employee.component.html
+++ b/client/src/app/modules/miscellaneous/components/forms/chips-employee/chips-employee.component.html
@@ -14,7 +14,7 @@
       [matChipInputFor]="chipListEmployee" [matChipInputSeparatorKeyCodes]="SEPARATOR_KEY_CODES" [disabled]="isDisabled"
       [matAutocomplete]="autoComplete">
   </mat-chip-list>
-  <mat-hint>Indiquez ici les personnes qui vous remplaceront pendant vos vacances. Elles verront alors vos objets
+  <mat-hint #employeHint *ngIf="isInProfile" >Indiquez ici les personnes qui vous remplaceront pendant vos vacances. Elles verront alors vos objets
     associés aux leurs.</mat-hint>
   <mat-autocomplete autoActiveFirstOption #autoComplete="matAutocomplete" [displayWith]="displayLabel"
     (optionSelected)="addEmployee($event)">
