--- a/client/src/app/modules/quotation/components/provision-board/provision-board.component.html
+++ b/client/src/app/modules/quotation/components/provision-board/provision-board.component.html
@@ -1,6 +1,17 @@
 <div class="mat-elevation-z2 form-div min-height">
+
   <div class="full-width">
-    <sort-table [actions]="tableAction" [columns]="displayedColumns" [values]="nbProvisionsDisplayed" tableName="Prestations AL">
+    <form [formGroup]="provisionBoardForm">
+      <table class="full-width">
+        <tr>
+          <td>
+            <chips-employee label="Sélectionner les membre de l'équipe " [(model)]="employeeSelected" [form]="provisionBoardForm"
+              [isMandatory]="false" [isDisabled]="false" [isInProfile]="false" (modelChange)="refreshEmployeesSelectedDataDisplayed($event)"  ></chips-employee>
+          </td>
+        </tr>
+      </table>
+    </form>
+    <sort-table [actions]="tableAction" [columns]="displayedColumns" [values]="nbProvisionsDisplayed" tableName="Prestations AL"  [refreshDatasTable]="refreshDatasTable">
     </sort-table>
   </div>
 </div>
