--- a/client/src/app/modules/miscellaneous/components/upload-attachement-dialog/upload-attachement-dialog.component.html
+++ b/client/src/app/modules/miscellaneous/components/upload-attachement-dialog/upload-attachement-dialog.component.html
@@ -25,7 +25,6 @@
       </mat-list>
     </div>
     <div align="center" class="send-button" *ngIf="file!=null && attachmentType!=null && !isSending"
-      (click)="uploadFile()"> <button mat-raised-button color="warn">Envoyer le
-        fichier</button></div>
+      (click)="uploadFile()"> <button mat-raised-button color="warn">Uploader le fichier</button></div>
   </form>
 </div>
