--- a/client/src/app/modules/quotation/components/invoice-management/invoice-management.component.html
+++ b/client/src/app/modules/quotation/components/invoice-management/invoice-management.component.html
@@ -1,15 +1,27 @@
 <div *ngIf="quotation && quotation.id" class=" form-div min-height ">
   <ng-container *ngIf="instanceOfCustomerOrderFn(quotation) &&  quotation.invoices">
-    <h3 class="invoice-title" *ngFor="let invoice of quotation.invoices">
-      Facture n°{{invoice.id}} émise à Paris, le {{invoice.createdDate|date:'dd/MM/yyyy à HH:mm'}}<span
-        *ngIf="getLetteringDate(invoice)">,
-        lettrée le {{getLetteringDate(invoice)|date:'dd/MM/yyyy à HH:mm'}}</span>
-      <chips-status class="invoice-chip" [status]="invoice.invoiceStatus.code" [value]="invoice.invoiceStatus.label">
-      </chips-status>
-      <mat-icon (click)="openRoute($event,'/invoicing/view/'+invoice.id)"
-        (auxclick)="openRoute($event,'/invoicing/view/'+invoice.id)" matTooltip="Voir la facture" color="accent"
-        class="pointer invoice-chip">visibility
-      </mat-icon>
+    <h3 *ngFor="let invoice of quotation.invoices">
+      <div class="invoice-title">Facture n°{{invoice.id}} émise à Paris, le
+        {{invoice.createdDate|date:'dd/MM/yyyy à HH:mm'}}<span *ngIf="getLetteringDate(invoice)">,
+          lettrée le {{getLetteringDate(invoice)|date:'dd/MM/yyyy à HH:mm'}}</span>
+        <chips-status class="invoice-chip" [status]="invoice.invoiceStatus.code" [value]="invoice.invoiceStatus.label">
+        </chips-status>
+        <mat-icon (click)="openRoute($event,'/invoicing/view/'+invoice.id)"
+          (auxclick)="openRoute($event,'/invoicing/view/'+invoice.id)" matTooltip="Voir la facture" color="accent"
+          class="pointer invoice-chip">visibility
+        </mat-icon>
+      </div>
+      <div class="invoice-title" *ngIf="invoice.creditNote">
+        <span>Avoir n°{{invoice.creditNote.id}} émis à Paris, le
+          {{invoice.creditNote.createdDate|date:'dd/MM/yyyy à HH:mm'}}</span>
+        <chips-status class="invoice-chip" [status]="invoice.creditNote.invoiceStatus.code"
+          [value]="invoice.creditNote.invoiceStatus.label">
+        </chips-status>
+        <mat-icon (click)="openRoute($event,'/invoicing/view/'+invoice.creditNote.id)"
+          (auxclick)="openRoute($event,'/invoicing/view/'+invoice.creditNote.id)" matTooltip="Voir l'avoir"
+          color="accent" class="pointer invoice-chip">visibility
+        </mat-icon>
+      </div>
     </h3>
   </ng-container>
   <ng-container *ngIf="instanceOfCustomerOrderFn(quotation) &&  quotation.providerInvoices">
