--- a/client/src/app/modules/quotation/components/provision-options/provision-options.component.html
+++ b/client/src/app/modules/quotation/components/provision-options/provision-options.component.html
@@ -101,12 +101,11 @@
               propertyName="isBusinnessNantissementRedaction"></generic-toggle>
           </td>
         </tr>
-        <tr *ngIf="displayOption(billingTypeSellerPrivilegeRedaction) && canDisplayNantissementBusiness()">
+        <tr *ngIf="displayOption(billingTypeSellerPrivilegeRedaction)">
           <td>
             <generic-toggle [(model)]="provision.isSellerPrivilegeRedaction"
               label="Rédaction de Bordereaux de privilège vendeur ?" [form]="optionForm"
-              (onToggleChange)="changeNantissementDeposit(provision.isSellerPrivilegeRedaction);provisionChangeFunction()"
-              propertyName="isSellerPrivilegeRedaction"></generic-toggle>
+              (onToggleChange)="provisionChangeFunction()" propertyName="isSellerPrivilegeRedaction"></generic-toggle>
           </td>
         </tr>
         <tr *ngIf="displayOption(billingTypeTreatmentMultipleModiciation)">
@@ -205,22 +204,25 @@
         </tr>
         <tr *ngIf="displayOption(billingTypeVacationDepositBeneficialOwners)">
           <td>
-            <generic-toggle [(model)]="provision.isVacationDepositBeneficialOwners" label="Vacation - Dépôt des Bénéficiaires Effectifs ?"
-              (onToggleChange)="provisionChangeFunction()" [form]="optionForm" propertyName="isVacationDepositBeneficialOwners">
+            <generic-toggle [(model)]="provision.isVacationDepositBeneficialOwners"
+              label="Vacation - Dépôt des Bénéficiaires Effectifs ?" (onToggleChange)="provisionChangeFunction()"
+              [form]="optionForm" propertyName="isVacationDepositBeneficialOwners">
             </generic-toggle>
           </td>
         </tr>
         <tr *ngIf="displayOption(billingTypeVacationUpdateBeneficialOwners)">
           <td>
-            <generic-toggle [(model)]="provision.isVacationUpdateBeneficialOwners" label="Vacation - Mise à jour - Bénéficiaires Effectifs ?"
-              (onToggleChange)="provisionChangeFunction()" [form]="optionForm" propertyName="isVacationUpdateBeneficialOwners">
+            <generic-toggle [(model)]="provision.isVacationUpdateBeneficialOwners"
+              label="Vacation - Mise à jour - Bénéficiaires Effectifs ?" (onToggleChange)="provisionChangeFunction()"
+              [form]="optionForm" propertyName="isVacationUpdateBeneficialOwners">
             </generic-toggle>
           </td>
         </tr>
         <tr *ngIf="displayOption(billingTypeFormalityAdditionalDeclaration)">
           <td>
-            <generic-toggle [(model)]="provision.isFormalityAdditionalDeclaration" label="Formalité - Déclaration Supplémentaire ?"
-              (onToggleChange)="provisionChangeFunction()" [form]="optionForm" propertyName="isFormalityAdditionalDeclaration">
+            <generic-toggle [(model)]="provision.isFormalityAdditionalDeclaration"
+              label="Formalité - Déclaration Supplémentaire ?" (onToggleChange)="provisionChangeFunction()"
+              [form]="optionForm" propertyName="isFormalityAdditionalDeclaration">
             </generic-toggle>
           </td>
         </tr>
