--- a/client/src/app/modules/administration/components/referentials/referential-announcement-notice-template/referential-announcement-notice-template.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-announcement-notice-template/referential-announcement-notice-template.component.html
@@ -47,8 +47,18 @@
                 <p>Texte :</p>
                 <span [innerHTML]="selectedEntity.text| trustHtml" class="no-font"></span>
               </div>
-              <ngx-trumbowyg-editor *ngIf="editMode" ngDefaultControl name="text" [(ngModel)]="selectedEntity.text"
-                formControlName="notice"></ngx-trumbowyg-editor>
+              <editor apiKey="tuyvqqbiskpltllm13hwnc00n4gjq5sc3gzrhlocmr75s1fw" *ngIf="editMode"
+                formControlName="notice" [disabled]="!editMode" [(ngModel)]="selectedEntity.text" [init]="{
+   height: 500,
+   menubar: false,
+   plugins: [
+     'table'
+   ],
+   toolbar:
+     'undo redo | formatselect | bold italic backcolor | \
+     alignleft aligncenter alignright alignjustify | \
+     bullist numlist outdent indent | removeformat | help'
+ }"></editor>
             </td>
           </tr>
         </table>
